--- a/ex012/index.html
+++ b/ex012/index.html
@@ -18,9 +18,14 @@
         <p>Seu navegador não tem compatibilidade com reprodução de vídeo.</p>
     </video>
     <h1>Incerindo vídeos do Youtube</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/FSSoQQ-Jav0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FSSoQQ-Jav0" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <h1>Incerindo vídeos do Vimeo</h1>
-    <iframe src="https://player.vimeo.com/video/426734993?h=206645ece0&autoplay=1&loop=1&color=ffffff&title=0&portrait=0" width="560" height="374" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe
+        src="https://player.vimeo.com/video/426734993?h=206645ece0&autoplay=1&loop=1&color=ffffff&title=0&portrait=0"
+        width="560" height="374" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
+        allowfullscreen></iframe>
 
 </body>
 
